fix(angular/search): ensure icon position is correctly aligned (#1081)
Closes #1079

--- a/src/angular/search/search.scss
+++ b/src/angular/search/search.scss
@@ -54,7 +54,3 @@
     padding: 0;
   }
 }
-
-.sbb-search .sbb-search-icon {
-  @include absoluteCenterXY();
-}
